# maya-plugin-cmake-boilerplate

./: .gitignore  CMakeLists.txt  README.md
include/: pluginMain.h  utilities.h
modules/: FindMaya.cmake
scripts/: load_plugin.py  maya_socket.py  unload_plugin.py
scripts/MEL/: testMenu.mel  userSetup.mel
scripts/dev/: devScripts.py  maya_socket.py
scripts/python/menu/: radialMenu.py
src/: pluginMain.cpp
